--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="#about" href="#">Sobre Mi</a>
+                <a class="nav-link active" aria-current="page" href="#">Sobre Mi</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#portfolio">Portfolio</a>
