--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
           </div>
         </div>
       </nav>
+      </div>
    <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <a class="navbar-brand" href="#">Augusto A. Castro</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,7 +57,7 @@
 -->        
         
     <!-- Encabezado -->
-    
+    <div>
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
