--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 -->        
         
     <!-- Encabezado -->
-    <div>
+    <div>   
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -123,10 +123,10 @@
                 <h1 class="text-center">Titulos y Certificados</h1>
                 <div class="carousel-inner ">
                   <div class="carousel-item active ">
-                    <img src="imagenes/arg-prog-1.jpg" class="d-block w-100  text-center" alt="certificado1">
-                  </div>
+                    <img src="imagenes/arg-prog-1.jpg" class="d-block w-100 caja" alt="certificado1">
+                  </div>  
                   <div class="carousel-item">
-                    <img src="imagenes/arg-prog-2.png" class="d-block w-100" alt="certificado2">
+                    <img src="imagenes/arg-prog-2.png" class="d-block w-100 caja" alt="certificado2">
                   </div>
                 </div>
                 <button class="carousel-control-prev " type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -193,7 +193,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <h4>Información de Contacto</h4>
-                    <p>Correo Electrónico: augustocastroo@gmail.com</p>
+                    <p>Correo Electrónico: augustocastroo38@gmail.com</p>
                     <p>Teléfono: 3878 801149</p>
                     <p>Ubicación: Oran, Salta, Argentina</p>
                     <!-- Agrega enlaces a tus perfiles de redes sociales si es necesario -->
@@ -204,11 +204,7 @@
 
     <!-- Enlaza Bootstrap JS y jQuery -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-        var myCarousel = document.querySelector('#carouselExampleAutoplaying')
-var carousel = new bootstrap.Carousel(myCarousel) 
-const carousel = new bootstrap.Carousel('#carouselExampleAutoplaying')
-   </script>
+   
     
 </body>
 </html>
