--- a/index.html
+++ b/index.html
@@ -128,6 +128,9 @@
                   <div class="carousel-item">
                     <img src="imagenes/arg-prog-2.png" class="d-block w-100 caja" alt="certificado2">
                   </div>
+                  <div class="carousel-item">
+                    <img src="imagenes/arg-prog-3.png" class="d-block w-100 caja" alt="certificado3">
+                  </div>
                 </div>
                 <button class="carousel-control-prev " type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
                   <span class="carousel-control-prev-icon bg-dark" aria-hidden="true"></span>
