--- a/index.html
+++ b/index.html
@@ -108,8 +108,10 @@
                         
                         <strong>• Curso HTML y CSS del Trayecto Programador Web Full Stack en ITMaster Academy </strong><br>
                         Argentina Programa 4.0 | 2023
+                        <strong>• Curso Programación Front-End del Trayecto Programador Web Full Stack en ITMaster Academy </strong><br>
+                        Argentina Programa 4.0 | 2023
                         </p>
-                        
+
                 </div>
                 <div class="col-md-5 col-sm-12 margen mt-0">
                     <!-- Agrega una imagen tuya -->
