--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                         UNSa | 2023 <br>
                         
                         <strong>• Curso HTML y CSS del Trayecto Programador Web Full Stack en ITMaster Academy </strong><br>
-                        Argentina Programa 4.0 | 2023
+                        Argentina Programa 4.0 | 2023 <br>
                         <strong>• Curso Programación Front-End del Trayecto Programador Web Full Stack en ITMaster Academy </strong><br>
                         Argentina Programa 4.0 | 2023
                         </p>
