--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+ <!-- Google tag (gtag.js) -->
+ <script async src="https://www.googletagmanager.com/gtag/js?id=G-28SMZV2XZF"></script>
+ <script>
+   window.dataLayer = window.dataLayer || [];
+   function gtag(){dataLayer.push(arguments);}
+   gtag('js', new Date());
+ 
+   gtag('config', 'G-28SMZV2XZF');
+ </script>
     <!-- Barra de navegación -->
 <div class="container">
     <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top" data-bs-theme ="dark">
@@ -86,7 +94,7 @@
 
     <!-- Sobre mí -->
     
-        <div class="container ">
+        <div class="container margentop">
             <div class="row bg-light rounded shadow mb-5">
                 <div class="col-md-7 col-sm-12">
                     <h2>Sobre Mí</h2>
@@ -183,8 +191,18 @@
                             <p class="card-text">Analisis y desglose de la base de datos de Netflix.</p>
                             <a href="https://lookerstudio.google.com/reporting/3c57cf8a-50b1-471b-b92e-bb52fd8a348b" target="_blank" class="btn btn-dark">Ver Detalles</a>
                         </div>
-                    </div>
-                </div>
+                        </div>
+                        </div>
+                          <div class="col-md-4 mb-4">
+                              <div class="card proyectos2">
+                                  <div class="card-body">
+                                      <h5 class="card-title letrasecoran"> ECORAN <img src="imagenes\logoecoran.svg" class="logo" alt="ecoranlogotipe"></h5>
+                                      <p class="card-text">Proyecto productivo en busqueda de financiamiento.</p>
+                                      <a href="https://654b28cbbcc41.site123.me/" target="_blank" class="btn btn-dark">Ver Detalles</a>
+                                  </div>
+                                  </div>
+                                  
+                          </div>
                 <!-- Repite esta estructura para más proyectos -->
             </div>
         </div>
@@ -207,15 +225,7 @@
         </div>
     </section>
 
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-28SMZV2XZF"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-28SMZV2XZF');
-</script>
+   
 
     <!-- Enlaza Bootstrap JS y jQuery -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
