ACT.MEJORA-VISUAL-SEC.SOBREMI

--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@
 
     <!-- Sobre mí -->
     
-        <div class="container margentop">
-            <div class="row bg-light rounded shadow mb-5">
+        <div class="container margentop ">
+            <div class="row bg-light rounded shadow mb-5 fondodatospers letrablanca">
                 <div class="col-md-7 col-sm-12">
-                    <h2>Sobre Mí</h2>
-                    <h3>• FORMACIÓN ACADÉMICA:</h3>
-                    <p><strong>• Secundario completo</strong> <br>
+                    <h2 class="text-center">Sobre Mí</h2>
+                    <h3 class="ps-3">• FORMACIÓN ACADÉMICA:</h3>
+                    <p class="ps-4"><strong>• Secundario completo</strong> <br>
                             Colegio N.s.d Huerto | 2011 – 2016 <br>
                         
                          <strong>• Mandatario del automotor matriculado </strong><br>
@@ -121,7 +121,7 @@
                         </p>
 
                 </div>
-                <div class="col-md-5 col-sm-12 margen mt-0">
+                <div class="col-md-5 col-sm-12 margen mt-5 text-center">
                     <!-- Agrega una imagen tuya -->
                     <img src="imagenes/img.jpg" alt="Tu Imagen" class="img-fluid rounded-circle mt-0 margen">
                 </div>
