--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
     <!-- Sobre mí -->
     
-        <div class="container margentop ">
+        <div class="container mt-5 ">
             <div class="row bg-light rounded shadow mb-5 fondodatospers letrablanca">
                 <div class="col-md-7 col-sm-12">
                     <h2 class="text-center">Sobre Mí</h2>
@@ -123,10 +123,10 @@
                 </div>
                 <div class="col-md-5 col-sm-12 margen mt-5 text-center">
                     <!-- Agrega una imagen tuya -->
-                    <img src="imagenes/img.jpg" alt="Tu Imagen" class="img-fluid rounded-circle mt-0 margen">
+                    <img src="imagenes/img.jpg" alt="Tu Imagen" class="img-fluid rounded-circle mt-2 border border-5 p-1 shadow-lg">
                 </div>
             </div>
-            <div class="container centrar">
+            <div class="container text-center">
             <div class="row">
     <div class="col-md-12 ">
             <div id="carouselExampleIndicators" class="carousel slide  col-md-12"> 
