ACT.CAMBIO-COLORES-BG

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <!-- Enlaza Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <!-- Agrega tu hoja de estilo personalizada -->
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
- <!-- Google tag (gtag.js) -->
+     <link rel="stylesheet" href="style.css">
+</ead>
+ <body class="bg-dark bg-gradient">
+ <!-- Google tag (gtag.js)  -->
  <script async src="https://www.googletagmanager.com/gtag/js?id=G-28SMZV2XZF"></script>
  <script>
    window.dataLayer = window.dataLayer || [];
@@ -130,7 +130,7 @@
             <div class="row">
     <div class="col-md-12 ">
             <div id="carouselExampleIndicators" class="carousel slide  col-md-12"> 
-                <h1 class="text-center">Titulos y Certificados</h1>
+                <h1 class="text-center letrablanca">Titulos y Certificados</h1>
                 <div class="carousel-inner ">
                   <div class="carousel-item active ">
                     <img src="imagenes/arg-prog-1.jpg" class="d-block w-100 caja" alt="certificado1">
@@ -152,23 +152,24 @@
             </div>
         </div>
     </div>    
-            <div class="row mt-4 bg-light rounded shadow">
+            <div class="row bg-light rounded shadow-lg fondodatospers mb-5 mt-5 letrablanca py-3">
                 <h3 class="text-center  col-md-12">EXPERIENCIA LABORAL:</h3>
-                                        <p class="col-md-6">
+                                        <p class="col-md-6 ps-4">
                                            <strong> Agustin Vidizzoni S.A. | Administrativo</strong> <br>
                                             Feb. 2020 – Dic. 2020 <br>
+                                            </p>
                                             <p class="col-md-6">
                                                 • Carga sistemática de datos. <br> 
                                                 • Control de recursos  (combustible, agroquímicos). <br> 
                                                 • Control de stock de granos procesados. <br> 	   
                                             </p> 
-                                           <p class="col-md-6"> <strong>J LOMITOS | Encargado  </strong> <br>
+                                           <p class="col-md-6 ps-4"> <strong>J LOMITOS | Encargado  </strong> <br>
                                              Enero 2019 – Enero 2020  - Feb. 2022 – Oct. 2023.<br></p>
                                                <p class="col-md-6"> • Control de caja. <br> 
                                                 • Abastecimiento.(Compras por mayor) <br>
                                                 • Control y supervisión del personal. <br>
                                                 • Atención al publico. <br></p>
-                                           <p class="col-md-6"> <strong>R.H COMPUTACIÓN| Ayudante taller </strong><br>
+                                           <p class="col-md-6 ps-4"> <strong>R.H COMPUTACIÓN| Ayudante taller </strong><br>
                                              Marzo 2018-Diciembre 2019<br></p>
                                             <p class="col-md-6">• Reparación de hardware. <br>  
                                             • Instalación de internet en domicilios. <br>
@@ -179,7 +180,7 @@
     </section>
     
     <!-- Portafolio -->
-    <section id="portfolio" class="py-5 bg-light">
+    <section id="portfolio" class="py-5 letrablanca">
         <div class="container text-center">
             <h2>Mi Portafolio</h2>
             <!-- Agrega tus proyectos aquí -->
