--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@
 
     <!-- Sobre mí -->
     
-        <div class="container mt-5 ">
-            <div class="row bg-light rounded shadow mb-5 fondodatospers letrablanca">
+        <div class="container mt-3 ">
+            <div class="row rounded shadow mb-5 fondodatospers letrablanca">
                 <div class="col-md-7 col-sm-12">
                     <h2 class="text-center">Sobre Mí</h2>
                     <h3 class="ps-3">• FORMACIÓN ACADÉMICA:</h3>
-                    <p class="ps-4"><strong>• Secundario completo</strong> <br>
+                    <p class="ps-3"><strong>• Secundario completo</strong> <br>
                             Colegio N.s.d Huerto | 2011 – 2016 <br>
                         
                          <strong>• Mandatario del automotor matriculado </strong><br>
@@ -121,15 +121,15 @@
                         </p>
 
                 </div>
-                <div class="col-md-5 col-sm-12 margen mt-5 text-center">
+                <div class="col-md-5 col-sm-12 mt-5 text-center">
                     <!-- Agrega una imagen tuya -->
                     <img src="imagenes/img.jpg" alt="Tu Imagen" class="img-fluid rounded-circle mt-2 border border-5 p-1 shadow-lg">
                 </div>
             </div>
-            <div class="container text-center">
-            <div class="row">
-    <div class="col-md-12 ">
-            <div id="carouselExampleIndicators" class="carousel slide  col-md-12"> 
+            <div class="container">
+            <div class="row  margencert">
+    <div class="col-md-10">
+            <div id="carouselExampleIndicators" class="carousel slide col-md-10 "> 
                 <h1 class="text-center letrablanca">Titulos y Certificados</h1>
                 <div class="carousel-inner ">
                   <div class="carousel-item active ">
