--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <!-- Agrega tu hoja de estilo personalizada -->
      <link rel="stylesheet" href="style.css">
-</ead>
+</head>
  <body class="bg-dark bg-gradient">
  <!-- Google tag (gtag.js)  -->
  <script async src="https://www.googletagmanager.com/gtag/js?id=G-28SMZV2XZF"></script>
@@ -37,6 +37,9 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#contact">Contacto</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link " target="_blank" href="https://www.linkedin.com/in/augusto-castro-bba912285/" ><img src="imagenes/linkedinlogo.png" class="logoli" alt="lilogo"> LinkedIn</a>
               </li>
             </ul>
           </div>
@@ -99,7 +102,7 @@
                 <div class="col-md-7 col-sm-12">
                     <h2 class="text-center">Sobre Mí</h2>
                     <h3 class="ps-3">• FORMACIÓN ACADÉMICA:</h3>
-                    <p class="ps-3"><strong>• Secundario completo</strong> <br>
+                    <p class="ps-4"><strong>• Secundario completo</strong> <br>
                             Colegio N.s.d Huerto | 2011 – 2016 <br>
                         
                          <strong>• Mandatario del automotor matriculado </strong><br>
@@ -121,17 +124,17 @@
                         </p>
 
                 </div>
-                <div class="col-md-5 col-sm-12 mt-5 text-center">
+                <div class="col-md-5 col-sm-12 my-5 text-center">
                     <!-- Agrega una imagen tuya -->
                     <img src="imagenes/img.jpg" alt="Tu Imagen" class="img-fluid rounded-circle mt-2 border border-5 p-1 shadow-lg">
                 </div>
             </div>
-            <div class="container">
-            <div class="row  margencert">
-    <div class="col-md-10">
-            <div id="carouselExampleIndicators" class="carousel slide col-md-10 "> 
+            <div class="container ps-sm-5">
+            <div class="row">
+    <div class="col-md-12">
+            <div id="carouselExampleIndicators" class="carousel slide col-md-12"> 
                 <h1 class="text-center letrablanca">Titulos y Certificados</h1>
-                <div class="carousel-inner ">
+                <div class="carousel-inner">
                   <div class="carousel-item active ">
                     <img src="imagenes/arg-prog-1.jpg" class="d-block w-100 caja" alt="certificado1">
                   </div>  
