--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Augusto Castro - Portafolio</title>
+    <link rel="icon" href="imagenes/cara_robot_con.png" type="image/x-icon">
     <!-- Enlaza Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <!-- Agrega tu hoja de estilo personalizada -->
@@ -23,7 +24,7 @@
 <div class="container">
     <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top" data-bs-theme ="dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Augusto A. Castro</a>
+          <a class="navbar-brand" href="#"> <img src="imagenes/cara_robot_con.png" alt="logopersonal" class="cararobot">Augusto A. Castro</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
