FIX,CERT-ARGPROG-1

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 <h1 class="text-center letrablanca">Titulos y Certificados</h1>
                 <div class="carousel-inner">
                   <div class="carousel-item active ">
-                    <img src="imagenes/arg-prog-1.jpg" class="d-block w-100 caja" alt="certificado1">
+                    <img src="imagenes/arg-prog-1.png" class="d-block w-100 caja" alt="certificado1">
                   </div>  
                   <div class="carousel-item">
                     <img src="imagenes/arg-prog-2.png" class="d-block w-100 caja" alt="certificado2">
