--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <!-- Agrega tu hoja de estilo personalizada -->
      <link rel="stylesheet" href="style.css">
+     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2924479933552579"
+     crossorigin="anonymous"></script>
 </head>
  <body class="bg-dark bg-gradient">
  <!-- Google tag (gtag.js)  -->
