--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-adsense-account" content="ca-pub-2924479933552579">
     <title>Augusto Castro - Portafolio</title>
     <link rel="icon" href="imagenes/cara_robot_con.png" type="image/x-icon">
     <!-- Enlaza Bootstrap CSS -->
