--- a/index.html
+++ b/index.html
@@ -124,7 +124,10 @@
                         <strong>• Curso HTML y CSS del Trayecto Programador Web Full Stack en ITMaster Academy </strong><br>
                         Argentina Programa 4.0 | 2023 <br>
                         <strong>• Curso Programación Front-End del Trayecto Programador Web Full Stack en ITMaster Academy </strong><br>
-                        Argentina Programa 4.0 | 2023
+                        Argentina Programa 4.0 | 2023 <br>
+                        <strong>• Curso de Ingles Nivel 1 CUI-UBA, A1.1 del Marco Común Europeo de Referencia para las Lenguas – MCER</strong><br>
+                        Programa de Lenguas Extranjeras para becarios Manuel Belgrano del Min. De Educación de la Nación | 2024
+
                         </p>
 
                 </div>
@@ -149,6 +152,10 @@
                     <img src="imagenes/arg-prog-3.png" class="d-block w-100 caja" alt="certificado3">
                   </div>
                 </div>
+                <div class="carousel-item">
+                  <img src="imagenes\INGLES.pdf" class="d-block w-100 caja" alt="certificado-ingles">
+                </div>
+              </div>
                 <button class="carousel-control-prev " type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
                   <span class="carousel-control-prev-icon bg-dark" aria-hidden="true"></span>
                 </button>
