--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <img src="imagenes\INGLES.pdf" class="d-block w-100 caja" alt="certificado-ingles">
+                  <img src="imagenes\inglesimg.png" class="d-block w-100 caja" alt="certificado-ingles">
                 </div>
               </div>
                 <button class="carousel-control-prev " type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
