--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
             </div>
         </div>
     </div>    
+    <section class="container">
             <div class="row bg-light rounded shadow-lg fondodatospers mb-5 mt-5 letrablanca py-3">
                 <h3 class="text-center  col-md-12">EXPERIENCIA LABORAL:</h3>
                                         <p class="col-md-6 ps-4">
@@ -191,8 +192,8 @@
                                             • Solución de problemas de software 
                                             </p>
                                         </div>
-        </div>
-    </section>
+                                      </section>
+    
     
     <!-- Portafolio -->
     <section id="portfolio" class="py-5 letrablanca">
